update issue : 1.change herobanner font-size 2.add change-language on mobile-layout 3.add link on section.doctor

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -840,10 +840,55 @@ aside {
     }
   }
 
+  .carousel-hero-banner {
+    .item {
+      .banner {
+        .text {
+          top: 70%;
+
+          h1 {
+            font-size: 50px;
+            line-height: 50px;
+
+            span {
+              display: inline;
+              top: 0;
+            }
+          }
+          span {
+            position: relative;
+            top: -2rem;
+            font-size: 40px;
+            line-height: 40px;
+          }
+        }
+      }
+    }
+  }
+
+  .mobile-language-change {
+    background-color: #fff;
+
+    a {
+      
+      &.mobile-language-change-item {
+        border: none;
+        width: 60px;
+        height: 60px;
+      }
+    }
+  }
+
   a.btn.--viewmore {
     width: 100%;
   }
+
   section.doctor {
+    a {
+      display: block;
+      position: relative;
+    }
+
     .tab-branch {
       ul.nav {
         li {
